Superscripted "ths" in 12ths. Added issue that top-alignment may be unique to MS Word.

--- a/index.html
+++ b/index.html
@@ -1743,7 +1743,7 @@
 
     <section id="ethiopic_footnotes">
       <h4>Footnotes &amp; Superscript</h4>
-      <p>Using MicroSoft Word as a reference point, Footnote counters are simple superscripted cardinal numbers.  The superscripted text is "top-aligned" with the reference text.  This alignment
+      <p>Using Microsoft Word as a reference point, Footnote counters are simple superscripted cardinal numbers.  The superscripted text is "top-aligned" with the reference text.  This alignment
          style works well the letters of the typeface are fixed height, but may not be visually optimal in a variable height writing sytem. We will apply Z-<span lang="am">ን</span> Alignment
          to illustrate the difficulty encountered with Ethiopic text.</p>
       <figure> <img src="images/ZN-Superscript.png" alt=" " />
@@ -1757,8 +1757,9 @@
         <p>Issues/Questions:</p>
         <ol>
           <li>What do stakeholders feel should be the default positioning style (fixed, floating)?</li>
-          <li>What should the relative height be of the superscripted text? The English default is a 7/12ths ratio.</li>
+          <li>What should the relative height be of the superscripted text? The English default is a 7/12<sup>ths</sup> ratio.</li>
           <li>Are Ethiopic numerals used for footnote counting?</li>
+          <li>Top-alignment of superscript text may only be an MS Word practice; superscript in web documents does not appear to follow the same vertical alignment rules.</li>
         </ol>
       </div>
     </section>
