More lang="am" spanners.

--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@
       <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-          <li><span lang="am">ቨ</span> appears to be equally included and omitted in ሀለሐመ  lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without ቨ).</li>
+          <li><span lang="am">ቨ</span> appears to be equally included and omitted in <span lang="am">ሀለሐመ </span> lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without <span lang="am">ቨ</span>).</li>
           <li>How is end of sequence handled in <span lang="am">ሀለሐመ</span>  lists?
             <ol type="a">
               <li>Sequence as radix, e.g.: <span lang="am">... ፈ ... ፐ ... ሀሀ ... ሀለ ...</span></li>
@@ -1553,7 +1553,7 @@
       <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-          <li><span lang="am">ቨ</span> appears to be equally included and omitted in አበገደ lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without ቨ).</li>
+          <li><span lang="am">ቨ</span> appears to be equally included and omitted in <span lang="am">አበገደ</span> lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without <span lang="am">ቨ</span>).</li>
           <li>How is end of sequence handled in <span lang="am">አበገደ</span> lists?
             <ol type="a">
               <li>Sequence as radix, e.g.: <span lang="am">... ጰ ... ፐ ... አአ ... አበ ...</span></li>
@@ -1882,7 +1882,7 @@
         <td>Author’s Note</td>
         <td lang="am">መስታወሻ</td>
         <td lang="ti"></td>
-        <td>Also የአሳታሚው ማስታወሻ</td>
+        <td>Also <span lang="am">የአሳታሚው ማስታወሻ</span></td>
       </tr>
       <tr id="term.references">
         <td>Bibliography</td>
