Translations added to punctuation section.

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
        punctuation though these associations must be understood as approximate.  Ethiopic fullstop and wordspace are highly regular in their application,
        others, particularly <span lang="am">፣</span>, <span lang="am">፤</span>, and <span lang="am">፥</span> will be consistently used within a document but their roles may change between authors or institutes.  A detailed
        review of punctuation semantics is beyond the scope of this document, however Ethiopic comma is given special attention in the following section.</p>
+    <p>The following descriptions of Ethiopic punctuation usage has been translated from Gebre and Shewaye.</p>
 
     <table>
       <thead>
@@ -251,7 +252,8 @@
               Tigrinya: <span lang="ti">ክልተ-ነጥቢ</span><br/>
               English: Ethiopic Wordspace<br/>
           </td>
-          <td><em>TBD</em></td>
+          <td>Literally “two dots” or “two points”. This mark is used to separate words.
+              Since the rise of digital publishing the mark is primarily applied today in a handwritten document.</td>
         </tr>
         <tr>
           <td lang="am" style="text-align: center;">፦</td>
@@ -261,27 +263,20 @@
               Tigrinya: <br/>
               English: Ethiopic Preface Colon<br/>
           </td>
-          <td><em>TBD</em></td>
+          <td>This mark is used following clarification of a certain subject. It will preface validation statements and examples that support the clarification.</td>
         </tr>
         <tr>
-          <td lang="am" style="text-align: center;">፥</td>
-          <td>U+1365</td>
-          <td>Ge’ez: <span lang="gez">ንዑስ ሠረዝ</span><br/>
-              Amharic: <span lang="am">ነጠላ ሰረዝ</span><br/>
-              Tigrinya: <br/>
-              English: Ethiopic Colon<br/>
-          </td>
-          <td><em>TBD</em></td>
-        </tr>
-        <tr>
-          <td lang="am" style="text-align: center;">፣</td>
-          <td>U+1363</td>
+          <td lang="am" style="text-align: center;">፣ ፥</td>
+          <td>U+1363 U+1365</td>
           <td>Ge’ez: <span lang="gez">ነጠላ ሠረዝ</span><br/>
               Amharic: <span lang="am">ነጠላ ሰረዝ</span><br/>
               Tigrinya: <span lang="ti">ንጽል ጭሕጋር (ንጽል ሰረዝ)</span><br/>
               English: Ethiopic Comma<br/>
           </td>
-          <td><em>TBD</em></td>
+          <td>Often used to separate comparative and sequential list of names, phrases, or numbers as well as to separate parts of a sentence that are not complete by themselves.
+              <em>A special note of explanation is needed here.  While the Unicode standard refers to “<span lang="am">፥</span>” as “ETHIOPIC COLON” the correlation with “colon” from Western practices as
+              the name implies can given the wrong impression over the functional role of the symbol in writing.  Noted writing experts Desta Tekle Wold, Kidane Wolde Kifle, Dereje Gebre, and Tesfaye Shewaye all assert the equivalence of the two symbols; a shared view that reduces the two symbols to simple glyph alternatives of one another.  There is some observed tendency to use “<span lang="am">፥</span>” glyph more frequently in religious works, thus to distinguish the two in discussion the “<span lang="am">፥</span>” glyph will be refered to in this document as either <span lang="gez">ንዑስ ሠረዝ</span> or ecclesiastical comma</em>
+          </td>
         </tr>
         <tr>
           <td lang="am" style="text-align: center;">፤</td>
@@ -291,7 +286,7 @@
               Tigrinya: <span lang="ti">ድርብ ጭሕጋር</span><br/>
               English: Ethiopic Semicolon<br/>
           </td>
-          <td><em>TBD</em></td>
+          <td>To separate equivalent main phrases in one idea. Even though it is not placed at the end of a paragraph, it can be used to separate sentences with similar ideas in a paragraph.</td>
         </tr>
         <tr>
           <td lang="am" style="text-align: center;">፧</td>
@@ -301,7 +296,7 @@
               Tigrinya: <span lang="ti">ምልክት ሕቶ (ትእምርተ ሕቶ)</span><br/>
               English: Ethiopic Question Mark<br/>
           </td>
-          <td><em>TBD</em></td>
+          <td>Used at the end of the questioning sentence. In modern writing  “?” is preffered.</td>
         </tr>
         <tr>
           <td lang="am" style="text-align: center;">።</td>
@@ -311,7 +306,7 @@
               Tigrinya: <span lang="ti">ኣርባዕተ ነጥቢ</span><br/>
               English: Ethiopic Fullstop<br/>
           </td>
-          <td><em>TBD</em></td>
+          <td>This mark is placed at the end of the sentence that describes the completeness of an idea.</td>
         </tr>
         <tr>
           <td lang="am" style="text-align: center;">፠</td>
@@ -1944,6 +1939,12 @@
         <td lang="ti">TBD</td>
         <td>Sometimes “<span lang="am">መግለጫ </span>” in older books</td>
       </tr>
+      <tr id="term.punctuation">
+        <td>Punctuation</td>
+        <td lang="am">ስርአተ ነጥብ</td>
+        <td lang="ti">TBD</td>
+        <td></td>
+      </tr>
       <tr id="term.table-of-contents">
         <td>Table of Contents</td>
         <td lang="am"><span lang="am">ማውጫ </span></td>
@@ -2083,6 +2084,13 @@
         <span style="margin-left:2em;"> <cite>Tegbarawi Yetsihifet Memariya</cite>, D. Gebre. Commercial Printing Enterprises, 2004. Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
         <span style="margin-left:2em;" lang="am"> <cite>ተግባራዊ፡የጽህፈት፡መማሪያ</cite>፣ ደረጀ ገብሬ። ንግድ ማተሚያ ድርጅት፣ ሚያዝያ 1996። አዲስ አበባ።</span></p>
+      </dd>
+      <dt>Shewaye, 1993</dt>
+      <dd>
+        <p><em>Transcribed Citation:</em><br/>
+        <span style="margin-left:2em;"> <cite>Anbebo YemMredatina YeMeSaf Chilotan Madaber</cite>, T. Shewaye. Educational Materials Publishing and Distribution Agency, 1993. Addis Ababa.</span></p>
+        <p><em>Source Citation:</em><br/>
+        <span style="margin-left:2em;" lang="am"> <cite>አንብቦ የመረዳትና የመጻፍ ችሎታን ማዳበር </cite>፣ ተስፋዬ ሸዋዬ። ት.መ.ማ.ማ.ድ.፣ 1986። አዲስ አበባ።</span></p>
       </dd>
     </dl>
     <h2>Full Image References</h2>
