Some prose updated in the page numbers, emphasis and ellipsis sections with sample images now presented.

--- a/index.html
+++ b/index.html
@@ -569,11 +569,14 @@
 
     <section id="ellipsis">
       <h4>Ellipsis</h4>
-      <p>Both pre-composed and mid-line ellipses are found in Ethiopic literature. The presence of one over the other may simply be an
-         artifact of the publishing technology and not necessarily in line with the publisher’s preference.</p>
+      <p>Both punctuation-baseline and raised ellipses are found in Ethiopic literature. In Ethiopic publishing ellipsis may have anywhere from 3 to 6 dots used regularly.  The presence of one style over the other may simply be an artifact of the publishing technology and not necessarily in line with the publisher's preference.</p>
+      <figure> <img src="images/raised-ellipsis.png" alt=" " />
+        <figcaption>Example of a raised 4-dot ellipsis in Atsie Menilik by Paulos Ngongo.</figcaption>
+      </figure>
       <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
+          <li>How many dots should be in an ellipsis?</li>
           <li>Which ellipsis form is the preferred as the default?</li>
           <li>How much spacing between dots is desirable?</li>
           <li>Are square dots preferable over circular?</li>
@@ -730,12 +733,16 @@
 
       <section id="emphasis_with_wordspace">
         <h4>Emphasis With Ethiopic Wordspace</h4>
-        <p>As a rule, a wordspace following a word that is emphasized in any way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge’ez literature tradition. </p>
+        <p>As a rule, a wordspace following a word that is emphasized in some way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge’ez literature tradition. Italic applied to Ethiopic has been experiment with since the arrival of desktop publishing. Earlier in the 20th century, a typeface change to a pre-20th century style would be applied in place of italic [TBD: scan example]. Underlined text was introduced to Ethiopic publishing in the earlier 20th century and was well established by the 1950s. It is not uncommon to find the underline “Ethiopicized” whereby the weight is made heavier to correspond with the greater weight of Ethiopic letters relative to Western weights.</p>
+      <figure> <img src="images/heavy-underline.png" alt=" " />
+        <figcaption>Heavier underline weight found in YeMaychew Qwuslegna by Mekonnen Zewdie.</figcaption>
+      </figure>
         <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
             <li>Does this rule make aesthetic sense in full justification with wordspace in centered positioning style? In Ge’ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
-          <li>Related: Does word emphasis include a following punctuation?</li>
+            <li>Should the underline of Ethiopic text use a weight that is proportionally heavier (with respect to the text), or apply only the weight of the word processor?</li>
+            <li>Related: Does word emphasis include a following punctuation?</li>
           </ol>
         </div>
       </section>
@@ -928,9 +935,10 @@
 
     <section id="first_paragraph">
       <h3>First Paragraph Rule</h3>
-      <p>Paragraph indentation is a modern Ethiopic practice.  The initial paragraph of a section is sometimes not indented.  This practice may be
-         idiosyncratic to an author but may represent a convention in use by a publishing house.  A best practice supported by stakeholders should be
-         established here.</p>
+      <p>Paragraph indentation is a regular practice in Ethiopic publishing, and not common in hand written manuscripts where a Hareg (<span lang="am">ሐረግ</span>) or Mekfel (<span lang="am">መክፈል</span>)
+         will be used instead. Some Western publishers will apply a special rule whereby the first paragraph of a section is not indented. The same
+         rule can be found applied in Ethiopic publications, however, the adoption appears to be limited.</p>
+      <!-- Note that ልጅነት ተመልሶ አይመጣም ፲፱፻፶፱ provides examples of no-indent-at-start-of-section -->
       <div class="issues">
       <p>Issues/Questions:</p>
         <ol>
@@ -1609,8 +1617,11 @@
     <section id="h_page_numbering">
       <h3>Page Numbering</h3>
       <p>The layout and formatting of page and section numbering in Ethiopic practices does not demonstrate a marked difference from Western conventions. 
-         Most often the page number itself will appear in the center footer position but may appear in any standard position (header, footer, center or right side).
+         Most often the page number itself will appear in the center footer position or in the outer header section, but may appear in any standard position.
          Page counting differences do need to be considered.</p>
+      <figure> <img src="images/page-number-in-two-systems.png" alt=" "/>
+        <figcaption>Page numbering in two systems from Metsehafe Chewata Sigawi-Zeneb Ethiopia.</figcaption>
+      </figure>
       <p>In Ethiopic book publishing, the first numbered page will generally be seen on the <span lang="am">መቅድም</span> section. When a <span lang="am">መቅድም</span> is not present,
          numbering is expected to begin at the <span lang="am">መግቢያ</span>. The prevailing Modern Ethiopic practice is to begin counting pages from the inner cover page (this
          is a matter of perception, by some views the outer cover is the first page and the inner cover, which is generally empty, is not counted). Thus the first printed
@@ -1942,7 +1953,7 @@
       <tr id="term.punctuation">
         <td>Punctuation</td>
         <td lang="am">ስርአተ ነጥብ</td>
-        <td lang="ti">TBD</td>
+        <td lang="ti">ስርአተ ነጥብ</td>
         <td></td>
       </tr>
       <tr id="term.table-of-contents">
