Fix to image link and wording tweak.

--- a/index.html
+++ b/index.html
@@ -733,8 +733,8 @@
 
       <section id="emphasis_with_wordspace">
         <h4>Emphasis With Ethiopic Wordspace</h4>
-        <p>As a rule, a wordspace following a word that is emphasized in some way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge’ez literature tradition. Italic applied to Ethiopic has been experiment with since the arrival of desktop publishing. Earlier in the 20th century, a typeface change to a pre-20th century style would be applied in place of italic [TBD: scan example]. Underlined text was introduced to Ethiopic publishing in the earlier 20th century and was well established by the 1950s. It is not uncommon to find the underline “Ethiopicized” whereby the weight is made heavier to correspond with the greater weight of Ethiopic letters relative to Western weights.</p>
-      <figure> <img src="images/heavy-underline.png" alt=" " />
+        <p>As a rule, a wordspace following a word that is emphasized in some way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge’ez literature tradition. Italic applied to Ethiopic has been experiment with since the arrival of desktop publishing. Earlier in the 20th century, a typeface change to a pre-20th century style would be applied in place of italic [TBD: scan example]. Underlined text was introduced to Ethiopic publishing in the earlier 20th century and was well established by mid-century. It is not uncommon to find the underline “Ethiopicized” whereby the weight is made heavier to correspond with the greater weight of Ethiopic letters relative to Western weights.</p>
+      <figure> <img src="images/heavy-underline-example.png" alt=" " />
         <figcaption>Heavier underline weight found in YeMaychew Qwuslegna by Mekonnen Zewdie.</figcaption>
       </figure>
         <div class="issues">
