Moved emphasis update to a more appropriate section.

--- a/index.html
+++ b/index.html
@@ -688,12 +688,16 @@
       <p>The following subsections present a proposed best practice of the authors.</p>
       <section id="emphasis_within_prose">
         <h4>Emphasis Within Prose</h4>
-        <p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p>
-        <p><em>[TBD: Examples Needed]</em></p>
+        <!-- p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p -->
+        <p> Italic applied to Ethiopic has been experiment with since the arrival of desktop publishing. Earlier in the 20th century, a typeface change to a pre-20th century style would be applied in place of italic [TBD: scan example]. Underlined text was introduced to Ethiopic publishing in the earlier 20th century and was well established by mid-century. It is not uncommon to find the underline “Ethiopicized” whereby the weight is made heavier to correspond with the greater weight of Ethiopic letters relative to Western weights.</p>
+      <figure> <img src="images/heavy-underline-example.png" alt=" " />
+        <figcaption>Heavier underline weight found in YeMaychew Qwuslegna by Mekonnen Zewdie.</figcaption>
+      </figure>
         <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
             <li>How much slant when an italic designed typeface is not available? 10% is suggested.</li>
+            <li>Should the underline of Ethiopic text use a weight that is proportionally heavier (with respect to the text), or apply only the weight of the word processor?</li>
           </ol>
         </div>
     <!--
@@ -733,15 +737,11 @@
 
       <section id="emphasis_with_wordspace">
         <h4>Emphasis With Ethiopic Wordspace</h4>
-        <p>As a rule, a wordspace following a word that is emphasized in some way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge’ez literature tradition. Italic applied to Ethiopic has been experiment with since the arrival of desktop publishing. Earlier in the 20th century, a typeface change to a pre-20th century style would be applied in place of italic [TBD: scan example]. Underlined text was introduced to Ethiopic publishing in the earlier 20th century and was well established by mid-century. It is not uncommon to find the underline “Ethiopicized” whereby the weight is made heavier to correspond with the greater weight of Ethiopic letters relative to Western weights.</p>
-      <figure> <img src="images/heavy-underline-example.png" alt=" " />
-        <figcaption>Heavier underline weight found in YeMaychew Qwuslegna by Mekonnen Zewdie.</figcaption>
-      </figure>
+        <p>As a rule, a wordspace following a word that is emphasized in some way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge’ez literature tradition.</p>
         <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
             <li>Does this rule make aesthetic sense in full justification with wordspace in centered positioning style? In Ge’ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
-            <li>Should the underline of Ethiopic text use a weight that is proportionally heavier (with respect to the text), or apply only the weight of the word processor?</li>
             <li>Related: Does word emphasis include a following punctuation?</li>
           </ol>
         </div>
