Adding more emphasis examples.

--- a/index.html
+++ b/index.html
@@ -536,6 +536,9 @@
       <h4>Parenthetical Expressions</h4>
       <p>Parenthetical expressions are found regularly in modern Ethiopic writing and will apply any of the enclosing symbol pairs:
         // , () and [].</p>
+      <figure> <img src="images/kwk-mashafa-sawasew-page-65-inner-parenthesis-one-line.png" alt=" " />
+        <figcaption>A practical example of inner parenthesis found in <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite> by Kidane Wolde Kifle.</figcaption>
+      </figure>
       <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
@@ -689,10 +692,16 @@
       <section id="emphasis_within_prose">
         <h4>Emphasis Within Prose</h4>
         <!-- p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p -->
-        <p> Italic applied to Ethiopic has been experiment with since the arrival of desktop publishing. Earlier in the 20th century, a typeface change to a pre-20th century style would be applied in place of italic [TBD: scan example]. Underlined text was introduced to Ethiopic publishing in the earlier 20th century and was well established by mid-century. It is not uncommon to find the underline “Ethiopicized” whereby the weight is made heavier to correspond with the greater weight of Ethiopic letters relative to Western weights.</p>
-      <figure> <img src="images/heavy-underline-example.png" alt=" " />
-        <figcaption>Heavier underline weight found in YeMaychew Qwuslegna by Mekonnen Zewdie.</figcaption>
-      </figure>
+        <p> Italic applied to Ethiopic has been experiment with since the arrival of desktop publishing. Earlier in the 20th century, a typeface change to a pre-20th century style would be applied in place of italic. Underlined text was introduced to Ethiopic publishing in the earlier 20th century and was well established by mid-century. It is not uncommon to find the underline “Ethiopicized” whereby the weight is made heavier to correspond with the greater weight of Ethiopic letters relative to Western weights.</p>
+        <figure> <img src="images/heavy-underline-example.png" alt=" " />
+          <figcaption>Heavier underline weight found in <cite>YeMaychew Qwuslegna</cite> by Mekonnen Zewdie.</figcaption>
+        </figure>
+        <figure> <img src="images/kwk-mashafa-sawasew-page-268-typeface-change-for-emphasis.jpg" alt=" " />
+          <figcaption>Typeface change for emphasis found in <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite> by Kidane Wolde Kifle.</figcaption>
+        </figure>
+        <figure> <img src="images/kwk-mezgebe-fidel-page-43-font-size-increase-for-emphasis.png" alt=" " />
+          <figcaption>Typeface size change for emphasis found in <cite>Mezgebe Fidel</cite> by Kidane Wolde Kifle.</figcaption>
+        </figure>
         <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
@@ -2133,7 +2142,7 @@
       <dt>Kifle, 1955</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite>, K.W. Kifle. Pages 65 &amp; 159. Artistic Printers, 1955 (1948 EC). Addis Ababa.</span></p>
+        <span style="margin-left:2em;"> <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite>, K. W. Kifle. Pages 65 &amp; 159. Artistic Printers, 1955 (1948 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
         <span style="margin-left:2em;" lang="gez"> <cite>መጽሐፈ፡ሰዋስው፡ወግስ፡ወመዝገበ፡ቃላት፡ሐዲስ</cite>፣ ኪዳነ፡ወልድ፡ክፍሌ። ገጾች ፷፭ እና ፻፶፱። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፵፰። አዲስ አበባ።</span></p>
       </dd>
