wording change in figure caption for consistency.

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
       <h4>Ellipsis</h4>
       <p>Both punctuation-baseline and raised ellipses are found in Ethiopic literature. In Ethiopic publishing ellipsis may have anywhere from 3 to 6 dots used regularly.  The presence of one style over the other may simply be an artifact of the publishing technology and not necessarily in line with the publisher's preference.</p>
       <figure> <img src="images/raised-ellipsis.png" alt=" " />
-        <figcaption>Example of a raised 4-dot ellipsis in Atsie Menilik by Paulos Ngongo.</figcaption>
+        <figcaption>Example of a raised 4-dot ellipsis found in Atsie Menilik by Paulos Ngongo.</figcaption>
       </figure>
       <div class="issues">
         <p>Issues/Questions:</p>
