Updates following spell checking.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         Most typically a Latin typeface will be made heavier to better match its Ethiopic counterpart.  This weight increase is demonstrated in many
         Ethiopic fonts that include  Latin letters. The font designer may have increased the weight of the Latin range primarily to provide heavier
         weight punctuation to use with Ethiopic script (see <a href="#ethiopicized_punctuation">Ethiopicized Punctuation</a>).</p>
-      <p>Literature produced with a heavier Latin tyepface may represent the author’s stylistic sensibilities but in some cases may  only be a
+      <p>Literature produced with a heavier Latin typeface may represent the author’s stylistic sensibilities but in some cases may  only be a
         pragmatic outcome when an author finds manually changing between fonts too burdensome. 
         The view of professional publishers is unknown here and should be determined.</p>
       <div class="issues">
@@ -202,9 +202,9 @@
        language communities utilizing Ethiopic script.  In Sebatbeit publishing a number of modifications to diacritical marks are regularly
        applied to aid glyph clarity.  These modified glyphs will sometimes appear within in font as a <em>Stylistic Alternative</em> or an
        entirely separate font may be used in publishing where these letter shapes appear as the default forms.  The glyphs are enumerated here and
-       are recommended for Sebatbeit liteature.</p>
+       are recommended for Sebatbeit literature.</p>
     <figure id="sebatbeit_glyph_preferences_sample"> <img src="images/Sebatbeit-Glyph-Preferences.png" alt=" " height="477" width="412" />
-      <figcaption>Labiovelar leter shape preferences for Sebatbeit (Sebat Bet) literature.</figcaption>
+      <figcaption>Labiovelar letter shape preferences for Sebatbeit (Sebat Bet) literature.</figcaption>
     </figure>
 
     <div class="issues">
@@ -221,7 +221,7 @@
   <h3>Punctuation</h3>
   <section id="ethiopic_punctuation">
     <h4>Punctuation Used in Ethiopic</h4>
-    <p>In Classical era Ethiopic up to nine puncutation marks can be found. Though rarely, if ever, would all nine be found in a single document.
+    <p>In Classical era Ethiopic up to nine punctuation marks can be found. Though rarely, if ever, would all nine be found in a single document.
        The Classical Ethiopic punctuation inventory may <em>appear</em> to be larger in number as a result of bi-chromatic rendering which can be
        applied to any punctuation and in several different styles.  However, the bi-chromatic forms do not change the syntactic role of a given
        punctuation.  In the Modern era, a third of the punctuation marks: <span lang="am">፧</span>, <span lang="am">፨</span>, and <span lang="am">፠</span> have largely fallen into disuse while a number of punctuation
@@ -332,15 +332,15 @@
     </table>
 
     <p>Adopted into Ethiopic writing practices are enclosing punctuation such as parenthesis, brackets, single and double quotation marks and guillemets.
-       Expressive punctuation such as question mark, exclaimation point, inverted exclaimation mark, and ellipsis are also incorporated into Ethiopic practices. 
+       Expressive punctuation such as question mark, exclamation point, inverted exclamation mark, and ellipsis are also incorporated into Ethiopic practices. 
        Additional foreign symbols that denote currency, time, mathematics, or communicate with Internet protocols (e.g. "@" , "://") have also
        been adopted as over the last century as international communication grew.</p>
     <p>The ES-781:2002 standard identifies the following inventory of western symbols to be used with Ethiopic:</p>
     <p style="margin-left: 20px"><code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’ “ ” ‹ › « »</code></p>
     <p>Additionally the following punctuation is observed to be used with Ethiopic writing:</p>
     <p style="margin-left: 20px"><code>$ : , € @ …</code></p>
-    <p>Inverted exclaimation mark is repurposed and utilized differently than in its Western usage.
-       In Ethiopic writing the inverted exclaimation mark is known as “Timirte Slaq” (<span lang="am">ትእምርተ፡ሥላቅ</span>) appears at the end of
+    <p>Inverted exclamation mark is repurposed and utilized differently than in its Western usage.
+       In Ethiopic writing the inverted exclamation mark is known as “Timirte Slaq” (<span lang="am">ትእምርተ፡ሥላቅ</span>) appears at the end of
        a sentence and will denote sarcasm. All borrowed punctuation is subject to typeface alignment with Ethiopic weights and shapes, an aesthetic
        enhancement discussed in this section as <a href="#ethiopicized_punctuation">“Ethiopicized Punctuation”</a>.</p>
   </section>
@@ -409,7 +409,7 @@
         <p>Issues/Questions:</p>
         <ol>
           <li>Are there any additional western symbols required for Ethiopic writing?</li>
-          <li>Are any symbols from other foreign script (Chinese, Arabic, etc) that should be included?</li>
+          <li>Are any symbols from other foreign script (Chinese, Arabic, etc.) that should be included?</li>
           <li>What symbols benefit from shape change?</li>
           <li>What symbols benefit from weight change?</li>
           <li>Noteworthy for layout correction is that an isolated left double guillemet, », is common in tabular text to indicate that the entry above is to be duplicated. This is a use case
@@ -594,7 +594,7 @@
       <p><em>Discuss: Do regular rules apply?  One consideration for Ethiopic would be that a newline is not a dependable word boundary
           in the common case where words are split across lines without a hyphen symbol and white space is the default wordspace.
         Word boundaries are known here only by context.</em></p>
-        <p class="issues">Discuss: The special case with wordspace sticking to a word leading to the mouse text selection rule that a following wordspace should be automatically selected with text, analagous to the rule applied to white space. MS Word does this.</p>
+        <p class="issues">Discuss: The special case with wordspace sticking to a word leading to the mouse text selection rule that a following wordspace should be automatically selected with text, analogous to the rule applied to white space. MS Word does this.</p>
     </section>
 
     <section id="ethiopic_wordspace_format">
@@ -602,7 +602,7 @@
 
       <section id="ethiopic_whitespace_rules">
         <h4>Rules of Applying Whitespace in Ethiopic Text</h4>
-        <p>When Ethiopic Wordspace (<span lang="am">፡</span>) is used to separate words, there may still be some valid application for white space “ ”. White space is permittable to support the following formatting needs:</p>
+        <p>When Ethiopic Wordspace (<span lang="am">፡</span>) is used to separate words, there may still be some valid application for white space “ ”. White space is permissible to support the following formatting needs:</p>
         <ul>
           <li>Indentation.</li>
           <li>Following a counter suffix.</li>
@@ -750,7 +750,7 @@
         <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
-            <li>Does this rule make aesthetic sense in full justification with wordspace in centered positioning style? In Ge’ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
+            <li>Does this rule make aesthetic sense in full justification with wordspace in centered positioning style? In Ge’ez manuscripts no issue arises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
             <li>Related: Does word emphasis include a following punctuation?</li>
           </ol>
         </div>
@@ -871,7 +871,7 @@
 
     <section id="justification_with_wordspace">
       <h4>Justification When ETHIOPIC WORDSPACE is the Word Delimiter</h4>
-      <p>Since the arrival of the printing press in Ethiopia in 1863 (Pankhurst, 1998), full justification of Ethiopic has been a common typesetting practice in Ethiopian, and later Eritrean, publishing houses. Earlier, Ethiopic justification rules are a feature of Hiob Ludolf’s Historia Æthiopica which is noted as the first use of movable type for Ethiopic script (Ludolf, 1681). Prior to letterpress typography, calligraphic manuscripts rendered on parchment also featured full, or approximately full, justification. Though the latter likely reflects the scribe’s desire not to waste a millimeter of available lateral writing space.</p>
+      <p>Since the arrival of the printing press in Ethiopia in 1863 (Pankhurst, 1998), full justification of Ethiopic has been a common typesetting practice in Ethiopian, and later Eritrean, publishing houses. Earlier, Ethiopic justification rules are a feature of Hiob Ludolf’s Historia Æthiopica, which is noted as the first use of movable type for Ethiopic script (Ludolf, 1681). Prior to letterpress typography, calligraphic manuscripts rendered on parchment also featured full, or approximately full, justification. Though the latter likely reflects the scribe’s desire not to waste a millimeter of available lateral writing space.</p>
       <p>The placement of Ethiopic wordspace presents a complication to the justification of Ethiopic text. Two placement styles developed in typeset
         literature which will be referred to here as “word bound” and “centered” styles. Additionally, the word spacing following an Ethiopic fullstop
         may (or may not) be governed by a special rule and in combination with the two wordspace spacing styles. These spacing rules are discussed in the
@@ -1644,7 +1644,7 @@
           <ol>
             <li>Where is page 1 counted from?</li>
             <li>Where does the first printed page appear?</li>
-            <li>Are there any other special considerations with page numbering? For example, page numbering of appendicies, etc.</li>
+            <li>Are there any other special considerations with page numbering? For example, page numbering of appendices, etc.</li>
           </ol>
         </div>
       <section id="h_preface_page_numbering">
@@ -1653,7 +1653,7 @@
            out to either the <span lang="am">መቅድም</span> or <span lang="am">መግቢያ</span>. Prior to "page 1" preceding pages may be numbered in one of two ways.  In the first
            convention where pages are numbered with Ethiopic numerals, the preface numbering may be alphabetic in the <span lang="am">ሀለሐመ</span> counting system or in the
            <span lang="am">አበገደ</span> sequence (for example in Deste Tekle Wold's "<span lang="am">ዐዲስ፡ያማርኛ፡መዝገበ፡ቃላት።</span>").</p>
-        <p>In the second convetion where pages are numbers with Western numerals, the preface page numbering will apply Ethiopic numerals.  Under both conventions the preface page
+        <p>In the second convention where pages are numbers with Western numerals, the preface page numbering will apply Ethiopic numerals.  Under both conventions the preface page
            number begins on the first printed page after the cover.</p>
         <div class="issues">
           <p>Issues/Questions:</p>
