Changed "three" to "four" in vertical alignment comparison section.

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
       <p>In the Ethiopic numeral system a single symbol may represent a numeral with an order of magnitude in the power of 0, 1, 2 or 4.
          This feature of the numeral system leads to several potential layout possibilities when numerals are arranged vertically.</p>
       <figure> <img src="images/numeral-vertical-alignment.png" alt=" " />
-        <figcaption>Three vertical alignments compared.</figcaption>
+        <figcaption>Four vertical alignments compared.</figcaption>
       </figure>
       <div class="issues">
         <p>Issues/Questions:</p>
